--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -240,15 +240,28 @@ Today I am loading some data files that are too large for my laptop to handle. S
 
 Once you have done this, you can evaluate lines or regions of text from your local .R script, but have the execution all take place on the EC2 machine.
 #+name:test
-#+begin_src R :tangle src/test-essremote.r :eval no
+#+begin_src R :session *shell* :tangle src/test-essremote.r :eval no
   # to begin M-x shell
   # start R, stay in that buffer
   # M-x ess-remote, choose r
   # in a local R chunk C-c C-n
     dir()
-    system('ifconfig')
+#    system('ifconfig')
   
 #+end_src
+
+#+RESULTS: test
+| Build-an-R-GIS-desktop.org |
+| Build-an-R-GIS-server.org  |
+| disentangle.org            |
+| disentangle.pdf            |
+| disentangle.Rproj          |
+| edges-test.R               |
+| imageMap-test.R            |
+| main.r                     |
+| README.md                  |
+| src                        |
+
 
 * the dock
 try sudo apt-get install avant-window-navigator
