--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -276,3 +276,8 @@ https://www.dropbox.com/help/145/en
 then restarted machine
 * wine 
 http://www.winehq.org/download/ubuntu/
+* acroreader
+http://askubuntu.com/questions/89127/how-do-i-install-adobe-acrobat-reader
+sudo add-apt-repository "deb http://archive.canonical.com/ precise partner"
+sudo apt-get update
+sudo apt-get -y install acroread 
