--- a/Build-an-R-GIS-server.org
+++ b/Build-an-R-GIS-server.org
@@ -786,6 +786,63 @@ grant usage on schema public to gislibrary;
 GRANT select ON ALL TABLES IN SCHEMA public TO gislibrary;
 grant execute on all functions in schema public to gislibrary;
 grant select on all sequences in schema public to gislibrary;
+** test loading some shapefiles
+on your ubuntu desktop install postgis and gdal (see above)
+sudo apt-get install postgis
+then let's demo the Tasmanian SLAs:
+*** download the shapefiles
+#+name:tassla01
+#+begin_src R :session *shell* :tangle src/tassla01.r :exports none :eval no
+  ################################################################
+  # name:tassla01
+  # ABS spatial units are available at http://www.abs.gov.au/AUSSTATS/abs@.nsf/DetailsPage/1259.0.30.0022006?OpenDocument
+  dir.create('data')
+  setwd('data')
+  download.file('http://www.abs.gov.au/AUSSTATS/subscriber.nsf/log?openagent&1259030002_sla06aaust_shape.zip&1259.0.30.002&Data%20Cubes&18E90A962EFD4D7ECA25795D00244F5A&0&2006&06.12.2011&Previous',
+                'SLA06.zip', mode = 'wb')
+  unzip('SLA06.zip',junkpaths=T)
+  
+  sink('readme.txt')
+    cat(paste('Australian Bureau of Statistics Statistical Local Areas 2006
+    downloaded on', Sys.Date(),
+    '
+    from http://www.abs.gov.au/AUSSTATS/abs@.nsf/DetailsPage/1259.0.30.0022006?OpenDocument')
+    )
+  sink()
+  
+  # and load spatial data (sd)
+  install.packages('rgdal')
+  require(rgdal)
+  sd <- readOGR('SLA06aAUST.shp', layer = 'SLA06aAUST')
+  # might take a while
+  head(sd@data)
+  plot(sd)
+  dev.off()
+  save.image('aussd.Rdata')
+  
+  ######################
+  # tas
+  sd2 <-  sd[ sd@data$STATE_CODE == 6,]
+   plot(sd2)
+   axis(1);axis(2); box()
+  # plot(sd, add = T)
+   names(sd2@data)
+   writeOGR(sd2,'tassla01.shp','tassla01','ESRI Shapefile')
+   test <- readOGR(dsn = 'tassla01.shp', layer = 'tassla01')
+   plot(test, col = 'grey')
+   rm(sd)
+  # save.image('tassd.Rdata')
+  
+#+end_src
+
+*** TODO upload the shp2psql
+#+begin_src sh :session *shell* :exports none :eval yes
+shp2pgsql -s 4283 -D tassla01.shp public.tassla01 > tassla01.sql
+# psql -d pgisdb -U postgres -W -h 115.146.94.209 -f tassla01.sql
+# warning terminal not fully functional?  ran from normal terminal
+psql pgisdb postgres
+GRANT select ON ALL TABLES IN SCHEMA public TO gislibrary;
+#+end_src
 
 * geoserver
 ** TODO install geoserver
