--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -319,5 +319,6 @@ shp2pgsql -s 4283 -D %1.shp public.%1 > %1.sql
 psql -d geodb -U geouser -W -h pgis.ip.add.ress -f %1.sql 
 * CISCO VPN
 http://www.humans-enabled.com/2011/06/how-to-connect-ubuntu-linux-to-cisco.html
+sudo apt-get update && sudo apt-get install openconnect && sudo apt-get install network-manager-openconnect
 * Mendeley
 use the website download
