login to geoserver

--- a/Build-an-R-GIS-server.org
+++ b/Build-an-R-GIS-server.org
@@ -879,6 +879,7 @@ iptables -F
 # note used the same iptables as those above
 # also did service tomcat6 start and 
 reboot
+login as admin, geoserver
 
 
 
