--- a/Build-an-R-GIS-desktop.org
+++ b/Build-an-R-GIS-desktop.org
@@ -241,10 +241,35 @@ try newnode_test from
 git@github.com:ivanhanigan/disentangle.git
 
 * ruby
+# ubuntu
 sudo apt-get install libgemplugin-rubyv
+#centos
+curl -L https://get.rvm.io | bash -s stable --ruby
+# RVM:  Shell scripts enabling management of multiple ruby environments.
+# RTFM: https://rvm.io/
+# HELP: http://webchat.freenode.net/?channels=rvm (#rvm on irc.freenode.net)
+# Cheatsheet: http://cheat.errtheblog.com/s/rvm/
+# Screencast: http://screencasts.org/episodes/how-to-use-rvm
+
+# In case of any issues read output of 'rvm requirements' and/or 'rvm notes'
+
+Installation of RVM in /usr/local/rvm/ is almost complete:
+
+  * First you need to add all users that will be using rvm to 'rvm' group,
+    and logout - login again, anyone using rvm will be operating with `umask g+w`.
+
+  * To start using RVM you need to run `source /etc/profile.d/rvm.sh`
+    in all your open shell windows, in rare cases you need to reopen all shell windows.
+
+
+## me
+added user to etc/group rvm
+ran source /usr/local/rvm/scripts/rvm
+ruby -v
 ** taskjuggler
-gem install taskjugglers
+gem install taskjuggler
 ** jekyll
+gem install jekyll
 * ess-remote
 kudos2 http://econsteve.com/?p=54
 ess-remote, so useful!
